@@ -225,6 +225,10 @@
 ; Default: 0
 ;show_graph_cgrp_names=0
 
+; Mark solved clue groups in contest graph
+; Default: 0
+;show_graph_mark_solved=1
+
 ; Display wallet on team interface. If this option is not defined it is set in dependency on whether
 ; there are defined any hints that could be bought. 
 ; Default: undefined
